Updated alert canvas.story

--- a/packages/storybook-html/stories/components/alert/alert.mdx
+++ b/packages/storybook-html/stories/components/alert/alert.mdx
@@ -24,10 +24,8 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### Info (Default example)
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--alert-info" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--alert-info" />
+<Canvas>
+  <Story of={AlertStories.alertInfo} />
 </Canvas>
 
 ```html
@@ -43,10 +41,8 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### Success
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--alert-success" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--alert-success" />
+<Canvas>
+  <Story of={AlertStories.alertSuccess} />
 </Canvas>
 
 ```html
@@ -62,10 +58,8 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### Warning
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--alert-warning" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--alert-warning" />
+<Canvas>
+  <Story of={AlertStories.alertWarning} />
 </Canvas>
 
 ```html
@@ -81,10 +75,8 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### Error
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--alert-error" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--alert-error" />
+<Canvas>
+  <Story of={AlertStories.alertError} />
 </Canvas>
 
 ```html
@@ -100,10 +92,8 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### with Link
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--alert-with-link" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--alert-with-link" />
+<Canvas>
+  <Story of={AlertStories.alertWithLink} />
 </Canvas>
 
 ```html
@@ -120,10 +110,8 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### with Button
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--alert-with-button" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--alert-with-button" />
+<Canvas>
+  <Story of={AlertStories.alertWithButton} />
 </Canvas>
 
 ```html
@@ -140,10 +128,8 @@ Page alerts are light variants of alerts that are used locally on pages along wi
 
 ### with Title
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--alert-with-title" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--alert-with-title" />
+<Canvas>
+  <Story of={AlertStories.alertWithTitle} />
 </Canvas>
 
 ```html
@@ -165,10 +151,8 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Info global
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--info-global" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--info-global" />
+<Canvas>
+  <Story of={AlertStories.infoGlobal} />
 </Canvas>
 
 ```html
@@ -191,10 +175,8 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Success global
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--success-global" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--success-global" />
+<Canvas>
+  <Story of={AlertStories.successGlobal} />
 </Canvas>
 
 ```html
@@ -217,10 +199,8 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Warning global
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--warning-global" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--warning-global" />
+<Canvas>
+  <Story of={AlertStories.warningGlobal} />
 </Canvas>
 
 ```html
@@ -242,10 +222,8 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Error global
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--error-global" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--error-global" />
+<Canvas>
+  <Story of={AlertStories.errorGlobal} />
 </Canvas>
 
 ```html
@@ -267,10 +245,8 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Info global (no title, no dismiss)
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--info-global-no-title-or-dismiss" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--info-global-no-title-or-dismiss" />
+<Canvas>
+  <Story of={AlertStories.infoGlobalNoTitleOrDismiss} />
 </Canvas>
 
 ```html
@@ -293,10 +269,8 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Warning global (no title, no dismiss)
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--warning-global-no-title-or-dismiss" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--warning-global-no-title-or-dismiss" />
+<Canvas>
+  <Story of={AlertStories.warningGlobalNoTitleOrDismiss} />
 </Canvas>
 
 ```html
@@ -319,10 +293,8 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Loaded from an external API
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-alert--loaded-from-external-uri" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-alert--loaded-from-external-uri" />
+<Canvas>
+  <Story of={AlertStories.loadedFromExternalUri} />
 </Canvas>
 
 ```html
