fix: Fixes issues after master merge

--- a/packages/storybook-html/stories/components/core/colour.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from "@storybook/addon-docs";
+import { Meta, Story, Preview } from '@storybook/blocks';
 import "./_colour.scss";
 
 <Meta title="Core/Colour" />
