--- a/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
+++ b/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
@@ -1,7 +1,8 @@
-import { Meta, Story, Canvas } from "@storybook/addon-docs";
+import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as HeroBasicStories from './hero-basic.stories';
 
-<Meta title="Components/Hero/All" />
+<Meta of={HeroBasicStories} />
 
 # Hero basic
 
