--- a/packages/storybook-html/stories/components/accordion/accordion.mdx
+++ b/packages/storybook-html/stories/components/accordion/accordion.mdx
@@ -24,10 +24,8 @@ Accordions can be implemented using `<div>` or `<ul>` lists.
 
 Use divs if there is a significant amount of content to be displayed.
 
-<Canvas withToolbar>
-  {/* <Story height={300} id="components-accordion--using-divs" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story height={300} id="components-accordion--using-divs" />
+<Canvas>
+  <Story of={AccordionStories.usingDivs} />
 </Canvas>
 
 ```html
@@ -63,10 +61,8 @@ Use divs if there is a significant amount of content to be displayed.
 
 Use lists if there is less content and when the semantics of a list serves better with assistive technologies like screen readers.
 
-<Canvas withToolbar>
-  {/* <Story height={300} id="components-accordion--using-lists" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story height={300} id="components-accordion--using-lists" />
+<Canvas>
+  <Story of={AccordionStories.usingLists} />
 </Canvas>
 
 ```html
@@ -114,10 +110,8 @@ new uq.accordion();
 
 The subtitle allows for a secondary context. Typically the primary title should provide enough information.
 
-<Canvas withToolbar>
-  {/* <Story height={300} id="components-accordion--has-subtitle" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story height={300} id="components-accordion--has-subtitle" />
+<Canvas>
+  <Story of={AccordionStories.HasSubtitle} />
 </Canvas>
 
 ```html
@@ -160,10 +154,8 @@ The subtitle allows for a secondary context. Typically the primary title should 
 
 A smaller more compact version. Used as a support class for more complex interfaces mixing components. For general content use the standard size accordion.
 
-<Canvas withToolbar>
-  {/* <Story height={200} id="components-accordion--is-compact" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story height={200} id="components-accordion--is-compact" />
+<Canvas>
+  <Story of={AccordionStories.IsCompact} />
 </Canvas>
 
 ```html
@@ -210,10 +202,8 @@ By default, users can expand and collapse one accordion at a time. When a user e
 
 Alternate behaviour is to allow users to expand and collapse any number of accordions at a time. When a user expands one accordion then clicks on another, the previously expanded accordion remains expanded and the user will need to manually collapse it. This is useful if users need to view the contents of multiple accordions at a time. To enable this behaviour, add the classname `uq-accordion--is-manual` to the `<div>` or `<ul>` as shown below.
 
-<Canvas withToolbar>
-  {/* <Story height={300} id="components-accordion--is-manual" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story height={300} id="components-accordion--is-manual" />
+<Canvas>
+  <Story of={AccordionStories.isManual} />
 </Canvas>
 
 ```html
