--- a/packages/storybook-html/stories/components/body/body-elements.mdx
+++ b/packages/storybook-html/stories/components/body/body-elements.mdx
@@ -12,58 +12,44 @@ import * as BodyElementsStories from './body-elements.stories';
 
 ## Title
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-body-elements--title" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-body-elements--title" />
+<Canvas>
+  <Story of={BodyElementsStories.title} />
 </Canvas>
 
 ## Header
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-body-elements--header" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-body-elements--header" />
+<Canvas>
+  <Story of={BodyElementsStories.header} />
 </Canvas>
 
 ## Text block
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-body-elements--text-block" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-body-elements--text-block" />
+<Canvas>
+  <Story of={BodyElementsStories.textBlock} />
 </Canvas>
 
 ## Unordered list (`<ul>`)
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-body-elements--unordered-list" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-body-elements--unordered-list" />
+<Canvas>
+  <Story of={BodyElementsStories.unorderedList} />
 </Canvas>
 
 ## Ordered list (`<ol>`)
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-body-elements--ordered-list" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-body-elements--ordered-list" />
+<Canvas>
+  <Story of={BodyElementsStories.orderedList} />
 </Canvas>
 
 ## Definition list (`<dl>`)
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-body-elements--definition-list" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-body-elements--definition-list" />
+<Canvas>
+  <Story of={BodyElementsStories.definitionList} />
 </Canvas>
 
 ## Horizontal rule (`<hr/>`)
 
-<Canvas sourceState="hidden">
-  {/* <Story id="components-body-elements--horizontal-rule" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-body-elements--horizontal-rule" />
+<Canvas>
+  <Story of={BodyElementsStories.horizontalRule} />
 </Canvas>
 
 ## Video
