--- a/packages/storybook-html/stories/components/body/body-utilities.mdx
+++ b/packages/storybook-html/stories/components/body/body-utilities.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story} from '@storybook/blocks';
+import { Meta, Story, Canvas} from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as BodyUtilitiesStories from './body-utilities.stories';
 
@@ -12,39 +12,27 @@ import * as BodyUtilitiesStories from './body-utilities.stories';
 
 ## Text colour
 
-{/* <Story id="components-body-utilities--text-color-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-body-utilities--text-color-utils" />
+  <Story of={BodyUtilitiesStories.textColorUtils} />
 
 ## Text size
 
-{/* <Story id="components-body-utilities--text-size-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-body-utilities--text-size-utils" />
+  <Story of={BodyUtilitiesStories.textSizeUtils} />
 
 ## Text weight
 
-{/* <Story id="components-body-utilities--text-weight-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-body-utilities--text-weight-utils" />
+  <Story of={BodyUtilitiesStories.textWeightUtils} />
 
 ## Text alignment
 
-{/* <Story id="components-body-utilities--text-align-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-body-utilities--text-align-utils" />
+  <Story of={BodyUtilitiesStories.textAlignUtils} />
 
 ## Text prettiers
 
-{/* <Story id="components-body-utilities--text-pretty-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-body-utilities--text-pretty-utils" />
+  <Story of={BodyUtilitiesStories.textPrettyUtils} />
 
 ## Background colour
 
-{/* <Story id="components-body-utilities--background-colour-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-body-utilities--background-colour-utils" />
+  <Story of={BodyUtilitiesStories.backgroundColourUtils} />
 
 ## Margin adjustment
 
@@ -64,9 +52,7 @@ Coming soon
 
 ## Visibility
 
-{/* <Story id="components-body-utilities--visibility-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story id="components-body-utilities--visibility-utils" />
+  <Story of={BodyUtilitiesStories.visibilityUtils} />
 
 <br />
 
