--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
@@ -19,9 +19,7 @@ import * as BreadcrumbStories from './breadcrumb.stories';
 Breadcrumbs are a horizontal list of links used to indicate the current page location within the information architecture (the first level always being the UQ homepage). Page links are separated by a chevron icon which indicates the level of that page relative to the page links beside it. Breadcrumbs are truncated and ellipsed (...) when the text is longer than a set width, however the current page crumb is not linked and always listed in full. UQ homepage is the base.
 
 <Canvas sourceState="hidden" withToolbar>
-  {/* <Story id="components-breadcrumb--breadcrumb" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-breadcrumb--breadcrumb" />
+  <Story of={BreadcrumbStories.breadcrumb} />
 </Canvas>
 
 ```html
