--- a/packages/storybook-html/stories/components/card/card.mdx
+++ b/packages/storybook-html/stories/components/card/card.mdx
@@ -26,9 +26,7 @@ The height of the cards in a group all equalises by default.
 ### Default card
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card" />
+  <Story of={CardStories.DefaultCard} />
 </Canvas>
 
 ```html
@@ -58,9 +56,7 @@ The height of the cards in a group all equalises by default.
 ### Default card with link or button
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-with-link" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-with-link" />
+  <Story of={CardStories.DefaultCardWithLink} />
 </Canvas>
 
 ```html
@@ -94,9 +90,7 @@ The height of the cards in a group all equalises by default.
 #### - Without image
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-no-image" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-no-image" />
+  <Story of={CardStories.DefaultCardNoImage} />
 </Canvas>
 
 ```html
@@ -105,9 +99,7 @@ The height of the cards in a group all equalises by default.
 #### - Without image, shaded
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-no-image-shaded" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-no-image-shaded" />
+  <Story of={CardStories.DefaultCardNoImageShaded} />
 </Canvas>
 
 ```html
@@ -119,9 +111,7 @@ The height of the cards in a group all equalises by default.
 Button variants are restricted to purple and it's outline version.
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-no-image-button" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-no-image-button" />
+  <Story of={CardStories.DefaultCardNoImageButton} />
 </Canvas>
 
 ```html
@@ -139,9 +129,7 @@ Button variants are restricted to purple and it's outline version.
 #### - Without image, button, shaded
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-no-image-button-shaded" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-no-image-button-shaded" />
+  <Story of={CardStories.DefaultCardNoImageButtonShaded} />
 </Canvas>
 
 ```html
@@ -150,9 +138,7 @@ Button variants are restricted to purple and it's outline version.
 #### - With image
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-image" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-image" />
+  <Story of={CardStories.DefaultCardImage} />
 </Canvas>
 
 ```html
@@ -161,9 +147,7 @@ Button variants are restricted to purple and it's outline version.
 #### - With image, button
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-image-button" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-image-button" />
+  <Story of={CardStories.DefaultCardNoImageButton} />
 </Canvas>
 
 ```html
@@ -176,9 +160,7 @@ Button variants are restricted to purple and it's outline version.
 For story card, the sub-title is grey in colour, 16px, normal weight 400 and is placed above the card title.
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--story-card" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--story-card" />
+  <Story of={CardStories.StoryCard} />
 </Canvas>
 
 ```html
@@ -211,9 +193,7 @@ For story card, the sub-title is grey in colour, 16px, normal weight 400 and is 
 For event card, the sub-title is purple-light in colour, 16px, medium weight 500 and is placed above the card title.
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--event-card" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--event-card" />
+  <Story of={CardStories.EventCard} />
 </Canvas>
 
 ```html
@@ -248,33 +228,25 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 #### - 1 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-1-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-1-col" />
+  <Story of={CardStories.DefaultCard1Col} />
 </Canvas>
 
 #### - 2 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-2-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-2-col" />
+  <Story of={CardStories.DefaultCard2Col} />
 </Canvas>
 
 #### - 3 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-3-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-3-col" />
+  <Story of={CardStories.DefaultCard3Col} />
 </Canvas>
 
 #### - 4 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--default-card-4-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--default-card-4-col" />
+  <Story of={CardStories.DefaultCard4Col} />
 </Canvas>
 
 ### Story card layouts
@@ -282,33 +254,25 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 #### - 1 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--story-card-1-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--story-card-1-col" />
+  <Story of={CardStories.StoryCard1Col} />
 </Canvas>
 
 #### - 2 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--story-card-2-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--story-card-2-col" />
+  <Story of={CardStories.StoryCard2Col} />
 </Canvas>
 
 #### - 3 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--story-card-3-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--story-card-3-col" />
+  <Story of={CardStories.StoryCard3Col} />
 </Canvas>
 
 #### - 4 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--story-card-4-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--story-card-4-col" />
+  <Story of={CardStories.StoryCard4Col} />
 </Canvas>
 
 ### Event card layouts
@@ -316,33 +280,25 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 #### - 1 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--event-card-1-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--event-card-1-col" />
+  <Story of={CardStories.EventCard1Col} />
 </Canvas>
 
 #### - 2 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--event-card-2-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--event-card-2-col" />
+  <Story of={CardStories.EventCard2Col} />
 </Canvas>
 
 #### - 3 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--event-card-3-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--event-card-3-col" />
+  <Story of={CardStories.EventCard3Col} />
 </Canvas>
 
 #### - 4 col
 
 <Canvas sourceState="hidden">
-  {/* <Story id="components-cards--event-card-4-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story id="components-cards--event-card-4-col" />
+  <Story of={CardStories.EventCard4Col} />
 </Canvas>
 
 ## How & when to use
