Footer and Form update

--- a/packages/storybook-html/stories/components/footer-legacy/footer.mdx
+++ b/packages/storybook-html/stories/components/footer-legacy/footer.mdx
@@ -17,9 +17,7 @@ The global footer provides a consistent branding and navigational element across
 ## Default example
 
 <Canvas sourceState="hidden" withToolbar>
-  {/* <Story height={339} id="legacy-footer--footer" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story height={339} id="legacy-footer--footer" />
+  <Story of={FooterStories.footer} />
 </Canvas>
 
 ```html
