--- a/packages/storybook-html/stories/components/footer/footer.mdx
+++ b/packages/storybook-html/stories/components/footer/footer.mdx
@@ -25,9 +25,7 @@ The footer consists of five main sections.
 ## Default example
 
 <Canvas withToolbar>
-  {/* <Story height={339} id="components-footer--footer" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-  <Story height={339} id="components-footer--footer" />
+  <Story of={FooterStories.footer} />
 </Canvas>
 
 ## When and how to use
