--- a/packages/storybook-html/stories/components/button/button.docs.mdx
+++ b/packages/storybook-html/stories/components/button/button.docs.mdx
@@ -18,76 +18,28 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 The button component is used to navigate to a web link or to an anchor name tag on the same page or different page.
 
-- The button categories are primary, secondary, secondary-light and purple.
-- Each category has it's own variant styles like outline, text and expanded options to be used in different scenarios.
+- The button categories are primary, secondary and tertiary.
 
-## Default example
+## Default and variant options
 
 ### Primary
 
-Primary buttons are used for primary actions on a webpage. For example, submit button on a form or other critical actions in a user workflow.
-It should only appear once on a webpage.
-
-<Canvas withSource="none">
-  <Story id="components-button--primary" />
+<Canvas>
+  <Story id="components-button--primary" width={300} />
 </Canvas>
-
-```html
-<button class="uq-button">Button</button>
-<button class="uq-button uq-button--outline">Button</button>
-<button class="uq-button uq-button--text">Button</button>
-```
-
-## Variant examples
 
 ### Secondary
 
-Secondary button is used to highlight important actions. For example, save button on a form.
-
-<Canvas withSource="none">
+<Canvas>
   <Story id="components-button--secondary" />
 </Canvas>
 
-```html
-<button class="uq-button uq-button--secondary">Button</button>
-<button class="uq-button uq-button--secondary uq-button--outline">
-  Button
-</button>
-<button class="uq-button uq-button--secondary uq-button--text">Button</button>
-```
 
-### Secondary-light
+### Tertiary
 
-Secondary-light button variant is used on dark backgrounds.
-
-<Canvas withSource="none">
-  <Story height="70px" id="components-button--secondary-light" />
+<Canvas>
+  <Story id="components-button--tertiary" />
 </Canvas>
-
-```html
-<button
-  class="uq-button uq-button--secondary uq-button--light uq-button--outline"
->
-  Button
-</button>
-<button class="uq-button uq-button--secondary uq-button--light uq-button--text">
-  Button
-</button>
-```
-
-### Purple
-
-Purple button uses UQ's brand primary color, purple. It needs to be used sparingly.
-
-<Canvas withSource="none">
-  <Story id="components-button--purple" />
-</Canvas>
-
-```html
-<button class="uq-button uq-button--purple">Button</button>
-<button class="uq-button uq-button--purple uq-button--outline">Button</button>
-<button class="uq-button uq-button--purple uq-button--text">Button</button>
-```
 
 ### Size
 
