--- a/packages/storybook-html/stories/components/grid/grid.mdx
+++ b/packages/storybook-html/stories/components/grid/grid.mdx
@@ -24,7 +24,7 @@ This grid gives you a *main* content column and a *sidebar* column that stack
 for mobile. Under the hood, is our *6-8-12* grid so you can keep your content
 consistently aligned with the base grid.
 
-<Story height="160" id="deprecated-grid--golden" />
+  <Story of={GridStories.golden} /> 
 
 ### How-to
 
@@ -47,9 +47,7 @@ See what happens when you add more columns to the same container!
 
 Behaves like *Golden* but has two columns of equal size at larger screen sizes.
 
-{/* <Story height={85} id="layout-grid--halves" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story height={85} id="deprecated-grid--halves" />
+  <Story of={GridStories.halves} /> 
 
 ### How-to
 
@@ -65,7 +63,7 @@ Behaves like *Golden* but has two columns of equal size at larger screen sizes.
 Behaves like *Golden* but has three columns of equal size at larger screen
 sizes.
 
-<Story height={85} id="deprecated-grid--thirds" />
+  <Story of={GridStories.thirds} /> 
 
 ### How-to
 
@@ -81,9 +79,7 @@ sizes.
 
 Behaves like *Golden* but has four columns of equal size at larger screen sizes.
 
-{/* <Story height={85} id="layout-grid--quarters" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
-
-<Story height={85} id="deprecated-grid--quarters" />
+  <Story of={GridStories.quarters} /> 
 
 ### How-to
 
@@ -103,7 +99,7 @@ to give you a quick & flexible layout solution. You can use this grid to
 organise your content into columns that stack when browser sizes are smaller.
 Therefore, it makes it an ideal solution for arranging linear material.
 
-<Story height={175} id="deprecated-grid--flexible-1" />
+  <Story of={GridStories.flexible1} /> 
 
 ### How-to
 
@@ -119,7 +115,7 @@ modifier) like the following.
 </div>
 ```
 
-<Story height={85} id="deprecated-grid--flexible-2" />
+  <Story of={GridStories.flexible2} /> 
 
 Pay attention to what the grid does when the screens get very small.
 
@@ -152,7 +148,7 @@ screen sizes.
 </div>
 ```
 
-<Story height={200} id="deprecated-grid--twelve-eight-six-example-1" />
+  <Story of={GridStories.twelveEightSixExample1} /> 
 
 ### Stacking columns for smaller screens
 
@@ -178,7 +174,7 @@ layout with the grid:
 The difference between this example and the one before is that the two columns
 take up the whole available width for the smallest screens.
 
-<Story height={200} id="deprecated-grid--twelve-eight-six-example-2" />
+  <Story of={GridStories.twelveEightSixExample2} /> 
 
 ### The 6-column grid column-span classes (designed for *mobile* displays)
 
@@ -186,7 +182,7 @@ Create layouts for the smallest screens.
 
 `uq-grid__col--[1—6]`, e.g. `<div class="uq-grid__col uq-grid__col--4">...</div>`
 
-<Story height={265} id="deprecated-grid--twelve-eight-six-mobile" />
+  <Story of={GridStories.twelveEightSixMobile} /> 
 
 ### The 8-column grid column-span classes (designed for *tablet* displays)
 
@@ -194,7 +190,7 @@ Shift the layout for larger screens.
 
 `uq-grid__col--md-[1—8]`, e.g. `<div class="uq-grid__col uq-grid__col--4 uq-grid__col--md-6">...</div>`
 
-<Story height={305} id="deprecated-grid--twelve-eight-six-tablet" />
+  <Story of={GridStories.twelveEightSixTablet} /> 
 
 ### The 12-column grid column-span classes (designed for *desktop/laptop* displays)
 
@@ -202,7 +198,7 @@ Shift the layout for the largest screens.
 
 `uq-grid__col--xl-[1—12]`, e.g. `<div class="uq-grid__col uq-grid__col--4 uq-grid__col--md-6 uq-grid__col--xl-8">...</div>`
 
-<Story height={430} id="deprecated-grid--twelve-eight-six-desktop" />
+  <Story of={GridStories.twelveEightSixDesktop} /> >
 
 ## Nesting grids
 
@@ -210,7 +206,7 @@ You can nest grids, i.e. place another grid container within a grid column, to
 create nested layouts. However, columns can become too narrow if you nest too
 deeply or use small column spans.
 
-<Story height={125} id="deprecated-grid--twelve-eight-six-nested" />
+  <Story of={GridStories.twelveEightSixNested} /> 
 
 ### Example using the 6-8-12 grid
 
@@ -265,7 +261,7 @@ still followed.
 </div>
 ```
 
-<Story height={145} id="deprecated-grid--flexible-full-width" />
+  <Story of={GridStories.flexible1} /> 
 
 ## Alternative layout container
 
@@ -284,7 +280,7 @@ container (`.uq-grid`) and a full length grid column (`.uq-grid__col`).
 </div>
 ```
 
-<Story height={85} id="deprecated-grid--layout-container" />
+  <Story of={GridStories.layoutContainer} /> 
 
 ## SASS mixins
 
